docker-k8s/deploy-svc1/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sunxufei-svc1
  labels:
    app: svc1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: svc1
  template:
    metadata:
      labels:
        app: svc1
    spec:
      containers:
      - name: svc1
        image: sunxufei/svc1
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 3001
