docker-k8s/deploy-svc1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sunxufei-svc1-service
spec:
  ports:
  - port: 81
    protocol: TCP
    targetPort: 3001
  selector:
    app: svc1
