docker-k8s/deploy-svc1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sunxufei-svc1-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sunxufei-svc1-service
            port: 
              number: 3001
      #host: tomcat.henry.com
